# qwen_mt_translator

./: LICENSE  README.md  README_CN.md  example.py  example_config.json  pyproject.toml
examples/: README.md  ranobe_cn.md  ranobe_translation_demo.py  readme_translation_demo.py  request_example.json  test_glossary_check.py
examples/configs/: ranobe_config.json  readme_en_to_zh_config.json  readme_zh_to_en_config.json
examples/data/: sample_long.md
qwen_mt_translator/: __init__.py  chunker.py  cli.py  config.py  core.py  merger.py
